--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 {{updatedtime}}
             </div>
         </div>
-        <div class="map" ng-click="myfndefault()">
+        <div class="map" ng-mouseleave="myfndefault()">
             <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
             <svg xmlns:mapsvg="http://mapsvg.com"
                  xmlns:dc="http://purl.org/dc/elements/1.1/"
