--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="stats-red" id="cnf" ng-click="funmappng($event)">
                 <span class="h">confirmed</span><br />
                 <span class="h">{{cnfrm}}</span><br />
-                <span class="" style="font-size:small">[+{{deltacnfrm}}]</span>
+                <span class="" style="font-size:small">+{{deltacnfrm}}</span>
             </div>
             <div class="stats-blue" id="act" ng-click="funmappng($event)">
                 <span class="h">active</span><br />
@@ -29,12 +29,12 @@
             <div class="stats-green" id="rcv" ng-click="funmappng($event)">
                 <span class="h">recovered</span><br />
                 <span class="h">{{recover}}</span><br />
-                <span class="" style="font-size:small">[+{{deltarcvr}}]</span>
+                <span class="" style="font-size:small">+{{deltarcvr}}</span>
             </div>
             <div class="stats-begun" id="dth" ng-click="funmappng($event)">
                 <span class="h">deceased</span><br />
                 <span class="h">{{death}}</span><br />
-                <span class="" style="font-size:small">[+{{deltadths}}]</span>
+                <span class="" style="font-size:small">+{{deltadths}}</span>
             </div>
         </div>
         <div class="state">
